--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-@maximeheckel:registry=https://npm.pkg.github.com
+@laodeaksar:registry=https://npm.pkg.github.com
 //npm.pkg.github.com/:_authToken=${GH_PACKAGES_TOKEN}
