--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@laodeaksar/design-system",
+  "name": "@laodeaksarr/ui",
   "version": "0.0.5",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
