--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -49,7 +49,7 @@ jobs:
           node-version: '16.x'
           registry-url: 'https://registry.npmjs.org'
           # Defaults to the user or organization that owns the workflow file
-          scope: '@laodeaksar'
+          scope: '@laodeaksarr'
       - name: Restore NPM dependencies
         uses: actions/cache@v2
         id: cache-dependencies
