--- a/.npmrc
+++ b/.npmrc
@@ -1,3 +1,3 @@
-@laodeaksar:registry=https://npm.pkg.github.com
+@laodeaksarr:registry=https://npm.pkg.github.com
 //npm.pkg.github.com/:_authToken=${GH_PACKAGES_TOKEN}
 always-auth=true
