--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -73,7 +73,7 @@ jobs:
         with:
           delete-branch: true
           reviewers: |
-            MaximeHeckel
+            laodeaksarr
           title: Bump package.json to version ${{steps.get-version.outputs.result}}
           commit-message: Bump package.json to version ${{steps.get-version.outputs.result}}
       - name: Publish
