--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,4 +80,4 @@ jobs:
           commit-message: Bump package.json to version ${{steps.get-version.outputs.result}}
       - name: Publish
         run: |
-          yarn publish
+          yarn publish --access public
