--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -31,7 +31,7 @@ jobs:
         id: cache-dependencies
         with:
           path: node_modules
-          key: ${{ runner.os }}-npm-v4-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-npm-v4-${{ hashFiles('yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-npm-
       - name: Install Dependencies
@@ -54,7 +54,7 @@ jobs:
         id: cache-dependencies
         with:
           path: node_modules
-          key: ${{ runner.os }}-npm-v4-${{ hashFiles('**/package-lock.json') }}
+          key: ${{ runner.os }}-npm-v4-${{ hashFiles('yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-npm-
       - name: Setup git config
