--- a/package.json
+++ b/package.json
@@ -27,9 +27,10 @@
     "@testing-library/react-hooks": "^7.0.2",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.40",
-    "@types/react-dom": "^17.0.13",
+    "@types/lodash": "^4.14.182",
+    "@types/node": "^18.0.3",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
     "esbuild": "^0.14.25",
@@ -42,9 +43,10 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "framer-motion": "^6.2.4",
     "jest": "^27.5.1",
+    "lodash": "^4.17.21",
     "prettier": "^2.6.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "rimraf": "^3.0.2",
     "ts-node": "^10.7.0",
     "typescript": "^4.6.2"
