--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
   },
   "peerDependencies": {
     "framer-motion": "^6.2.4",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react": "^17 || ^18",
+    "react-dom": "^17 || ^18"
   },
   "dependencies": {
     "@radix-ui/react-tabs": "^0.1.5",
