--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "^5.16.2",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/react-hooks": "^7.0.2",
-    "@testing-library/user-event": "^13.5.0",
+    "@testing-library/dom": "^8.16.1",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.3.0",
+    "@testing-library/user-event": "^14.4.2",
     "@types/jest": "^27.4.1",
     "@types/lodash": "^4.14.182",
-    "@types/node": "^18.0.3",
-    "@types/react": "^18.0.15",
+    "@types/node": "^17.0.21",
+    "@types/react": "^18.0.16",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.15.0",
     "@typescript-eslint/parser": "^5.15.0",
@@ -41,8 +41,9 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "framer-motion": "^6.2.4",
-    "jest": "^27.5.1",
+    "framer-motion": "^7.0.0",
+    "jest": "^28.1.3",
+    "jest-environment-jsdom": "^28.1.3",
     "lodash": "^4.17.21",
     "prettier": "^2.6.0",
     "react": "^18.2.0",
@@ -52,13 +53,13 @@
     "typescript": "^4.6.2"
   },
   "peerDependencies": {
-    "framer-motion": "^6.2.4",
-    "react": "^17 || ^18",
-    "react-dom": "^17 || ^18"
+    "framer-motion": "^7.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "dependencies": {
-    "@radix-ui/react-tabs": "^0.1.5",
-    "@radix-ui/react-tooltip": "^0.1.7",
+    "@radix-ui/react-tabs": "^1.0.0",
+    "@radix-ui/react-tooltip": "^1.0.0",
     "@stitches/react": "^1.2.8"
   }
 }
