--- a/package.json
+++ b/package.json
@@ -59,10 +59,8 @@
   },
   "dependencies": {
     "@radix-ui/react-tabs": "^1.0.0",
+    "@radix-ui/react-toast": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
-    "@stitches/react": "^1.2.8",
-    "@tabler/icons": "^1.94.0",
-    "quill-mention": "^3.1.0",
-    "react-quill": "^2.0.0"
+    "@stitches/react": "^1.2.8"
   }
 }
