--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,24 @@
 {
-    "include": ["src/**/*"],
-    "exclude": ["node_modules", "**/*.test.*"],
-    "compilerOptions": {
-        "allowSyntheticDefaultImports": true,
-        "baseUrl": ".",
-        "declaration": true,
-        "declarationDir": "dist/types",
-        "downlevelIteration": true,
-        "esModuleInterop": true,
-        "forceConsistentCasingInFileNames": true,
-        "isolatedModules": true,
-        "jsx": "react-jsx",
-        "lib": ["dom", "es2017"],
-        "module": "ESNext",
-        "moduleResolution": "node",
-        "noFallthroughCasesInSwitch": true,
-        "outDir": "dist/types",
-        "resolveJsonModule": true,
-        "skipLibCheck": true,
-        "strict": true,
-        "target": "es5",
-    }
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.test.*"],
+  "compilerOptions": {
+    "allowSyntheticDefaultImports": true,
+    "baseUrl": ".",
+    "declaration": true,
+    "declarationDir": "dist/types",
+    "downlevelIteration": true,
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "lib": ["dom", "es2017"],
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "noFallthroughCasesInSwitch": true,
+    "outDir": "dist/types",
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "target": "es5"
+  }
 }
-  
