--- a/package.json
+++ b/package.json
@@ -64,7 +64,6 @@
     "@radix-ui/react-tabs": "^1.0.0",
     "@radix-ui/react-toast": "^1.0.0",
     "@radix-ui/react-tooltip": "^1.0.0",
-    "@stitches/react": "^1.2.8",
-    "react-hot-toast": "^2.4.0"
+    "@stitches/react": "^1.2.8"
   }
 }
