--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@laodeaksarr/design-system",
+  "name": "@bahutara/design-system",
   "version": "1.1.1",
   "main": "./dist/cjs/index.js",
   "module": "./dist/esm/index.js",
